force-app/main/default/objects/OMOpportunity__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <label>Additional Comments</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>