force-app/main/default/objects/OMOpportunity__c/fields/Desired_Skills__c.field-meta.xml
<CustomField>
    <fullName>Desired_Skills__c</fullName>
    <label>Desired Skills</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>