force-app/main/default/objects/OMOpportunity__c/fields/Distributed_Team__c.field-meta.xml
<CustomField>
    <fullName>Distributed_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the team have distributed team members (remote employees)?</description>
    <label>Distributed Team</label>
    <type>Checkbox</type>
</CustomField>