force-app/main/default/objects/OMOpportunity__c/fields/Highlighted__c.field-meta.xml
<CustomField>
    <fullName>Highlighted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This opportunity will show up on the OOM welcome page.</description>
    <label>V2MOM Top Priority</label>
    <type>Checkbox</type>
</CustomField>