force-app/main/default/objects/OMOpportunity__c/fields/Intranet_Posting__c.field-meta.xml
<CustomField>
    <fullName>Intranet_Posting__c</fullName>
    <inlineHelpText>If there is an associated talentforce posting include a link to the job opening on the intranet.</inlineHelpText>
    <label>Intranet Posting</label>
    <type>Url</type>
</CustomField>