force-app/main/default/objects/OMOpportunity__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <defaultValue>&quot;All levels&quot;</defaultValue>
    <inlineHelpText>For example, &quot;Any Level&quot;, &quot;MTS and above&quot;, &quot;Director&quot;, etc.</inlineHelpText>
    <label>Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>