force-app/main/default/objects/OMOpportunity__c/fields/Opportunity_Description__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Description__c</fullName>
    <label>Opportunity Description</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>