force-app/main/default/objects/OMOpportunity__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Release the opportunity is for.</description>
    <label>Release</label>
    <referenceTo>ADM_Release__c</referenceTo>
    <relationshipLabel>Open Market Opportunities</relationshipLabel>
    <relationshipName>Open_Market_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>