force-app/main/default/objects/OMOpportunity__c/fields/Required_Skills__c.field-meta.xml
<CustomField>
    <fullName>Required_Skills__c</fullName>
    <label>Required Skills</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>