force-app/main/default/objects/OMOpportunity__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <referenceTo>ADM_Scrum_Team__c</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>