force-app/main/default/objects/OMOpportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Team__c</columns>
    <columns>Function__c</columns>
    <columns>Level__c</columns>
    <columns>Status__c</columns>
    <columns>Hiring_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>