force-app/main/default/objects/OMOpportunity__c/listViews/All_Open_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_Open_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>Team__c</columns>
    <columns>Function__c</columns>
    <columns>Level__c</columns>
    <columns>Hiring_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Release__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,Interviewing</value>
    </filters>
    <label>All Open Opportunities</label>
</ListView>